--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="movie_trailer_original">Оригинальный</string>
     <string name="movie_trailer_russian">Русский</string>
     <string name="movie_no_trailers">К сожалению у данного фильма нет трейлеров</string>
+    <string name="movie_share">Поделиться</string>
+    <string name="movie_no_share_application">Отсутвуют приложения для функционала "Полелиться"</string>
+    <string name="movie_share_title">Фильм %s на языке оригинала в кино</string>
 
     <!-- CinemasFragment -->
     <string name="cinemas_map_menu">На карте</string>
