--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SubsCity</string>
-    <string name="file_export_provider">com.source.subscity.FileProvider</string>
+    <string name="file_export_provider">com.markus.subscity.FileProvider</string>
     <string name="send">Отправить</string>
     <string name="email_address">subscity.info@gmail.com</string>
     <string name="email_subject">Обратная связь. Приложение SubsCity</string>
