Update version and fix donate settings item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="file_export_provider">com.markus.subscity.FileProvider</string>
     <string name="send">Отправить</string>
     <string name="github_url">https://github.com/Vittt2008/SubsCity</string>
-    <string name="developer_email">vitalii.markus@gmail.com</string>
+    <string name="developer_email">§</string>
     <string name="designer_email">shelmoon518@gmail.com</string>
     <string name="empty_title" />
 
